# ckb-privacy-mixer

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  index.html  mixer_comparison.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
circuits/: mixer.circom  mixer_final.zkey  package.json  verification_key.json
circuits/mixer_js/: mixer.wasm
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/mixer-pool-type/: Cargo.toml
contracts/mixer-pool-type/src/: error.rs  main.rs
contracts/nullifier-type/: Cargo.toml
contracts/nullifier-type/src/: error.rs  main.rs
contracts/zk-membership-type/: Cargo.toml
contracts/zk-membership-type/src/: error.rs  main.rs  vk.rs
mixer-sdk/: package.json  tsconfig.json
mixer-sdk/src/: client.ts  index.ts  node-crypto.d.ts
mixer-sdk/src/core/: session.ts
mixer-sdk/src/examples/: phase4.ts
mixer-sdk/src/operations/: deposit.ts  withdraw.ts
mixer-sdk/src/providers/: withdrawal.ts
mixer-sdk/src/types/: config.ts  note.ts  pool.ts  proof.ts  withdrawal.ts
mixer-sdk/src/utils/: config.ts  crypto.ts  encoding.ts  merkle.ts  proof.ts  prover.ts  rpc.ts  snark.ts  stealth.ts
scripts/: bootstrap-registry.ts  deploy-obscell.ts  deploy.ts  deposit.ts  generate-proof.ts  generate-vk-rs.ts  lumos-common.ts  mix.ts  obscell_deployment_results.json  phase4.ts  withdraw.ts
src/: App.tsx  index.css
src/lib/: mixer.ts  obscell-adapter.ts
tests/: Cargo.toml
tests/src/: lib.rs  nullifier_tests.rs  pool_tests.rs  withdrawal_integration_tests.rs  zk_membership_tests.rs
