[package]
name = "zk-membership-type"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = "=1.0.2"
sha2 = { version = "0.10", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-serialize = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false }

[features]
library = []
